@@ -1,3 +1,7 @@
+Tue May 27 21:36:22 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
+
+	* current-trunk: Merged from upstream-trunk.
+
 Tue May 27 21:35:10 UTC 2014  John Tytgat  <John.Tytgat@aaug.net>
 
 	* upstream-trunk: Sync'd with
